# tdd-projet

./: Dockerfile  pyproject.toml  requirements.txt
store/core/: exceptions.py
store/models/: base.py
store/schemas/: base.py  product.py
store/usecases/: product.py
tests/schemas/: test_product.py
